fixed profile layouts

--- a/app/src/main/res/layout/activity_legal.xml
+++ b/app/src/main/res/layout/activity_legal.xml
@@ -27,8 +27,10 @@
     <WebView
         android:id="@+id/webViewLegal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/grayish_blue1"/>
+        android:layout_height="0dp"
+        android:background="@color/grayish_blue1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
 <!--    <TextView-->
 <!--        android:id="@+id/textView20"-->
