--- a/app/src/main/res/layout/activity_how_tara_works.xml
+++ b/app/src/main/res/layout/activity_how_tara_works.xml
@@ -27,6 +27,8 @@
     <WebView
         android:id="@+id/webViewHowTaraWorks"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
