--- a/app/src/main/res/layout/activity_legal.xml
+++ b/app/src/main/res/layout/activity_legal.xml
@@ -30,6 +30,8 @@
         android:layout_height="0dp"
         android:background="@color/grayish_blue1"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
 <!--    <TextView-->
