--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="grayish_blue1">#f0f0f5</color>
     <color name="grayish_blue2">#b3b3c7</color>
     <color name="graying_blue3">#a0a0ba</color>
+    <color name="blueText">#021637</color>
+    <color name="yellowBg">#f2d41d</color>
 </resources>
