--- a/app/src/main/res/layout/fragment_book_car.xml
+++ b/app/src/main/res/layout/fragment_book_car.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Book A Car"
+        android:text="Book a Car"
         android:textSize="25dp"
         android:textColor="@color/black"
         android:textStyle="bold"
