--- a/app/src/main/res/layout/activity_contact_support.xml
+++ b/app/src/main/res/layout/activity_contact_support.xml
@@ -39,7 +39,7 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_semibold"
             android:text="We are here for you"
-            android:textColor="@color/blueText"
+            android:textColor="@color/dark_blue"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_semibold"
             android:text="always."
-            android:textColor="@color/blueText"
+            android:textColor="@color/dark_blue"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -65,7 +65,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="196dp"
             android:layout_marginRight="50dp"
-            app:cardBackgroundColor="@color/yellowBg"
+            app:cardBackgroundColor="@color/yellow"
             app:cardCornerRadius="15dp"
             app:cardElevation="12dp"
             app:layout_constraintEnd_toEndOf="parent"
