--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,29 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grayish_blue1"
+    android:background="@color/dark_blue"
     tools:context=".LoginRegistration.SignupActivity">
 
     <TextView
         android:id="@+id/signupTxt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="Signup"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Sign Up"
+        android:textColor="@color/white"
         android:textSize="50sp"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.239"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/name"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="56dp"
-        android:hint="Name"
-        android:paddingLeft="10dp"
-        android:background="@drawable/et_background"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:hint="Full Name"
+        android:drawableStart="@drawable/ic_name"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/yellow"
+        android:paddingBottom="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,46 +45,76 @@
 
     <EditText
         android:id="@+id/emailSignup"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:hint="Email"
-        android:paddingLeft="10dp"
-        android:background="@drawable/et_background"
+        android:drawableStart="@drawable/ic_email"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/yellow"
+        android:paddingBottom="15dp"
         app:layout_constraintEnd_toEndOf="@+id/name"
         app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <EditText
         android:id="@+id/passwordSignup"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:hint="Password"
-        android:paddingLeft="10dp"
-        android:background="@drawable/et_background"
+        android:drawableStart="@drawable/ic_password"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/yellow"
+        android:paddingBottom="15dp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/emailSignup"
         app:layout_constraintStart_toStartOf="@+id/emailSignup"
         app:layout_constraintTop_toBottomOf="@+id/emailSignup" />
 
     <EditText
         android:id="@+id/confirmPassword"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
         android:hint="Confirm Password"
-        android:paddingLeft="10dp"
-        android:background="@drawable/et_background"
+        android:textColor="@color/white"
+        android:drawableStart="@drawable/ic_password"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/yellow"
+        android:paddingBottom="15dp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/passwordSignup"
         app:layout_constraintStart_toStartOf="@+id/passwordSignup"
         app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />
 
     <Button
         android:id="@+id/signupBtn"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Signup"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Sign Up"
+        android:textColor="@color/dark_blue"
+        android:textSize="16sp"
+        android:paddingTop="6dp"
+        android:background="@drawable/btn_login_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,9 +124,11 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="or"
-        android:textColor="@color/black"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="or sign in with:"
+        android:textSize="16sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/signupBtn"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="@+id/signupBtn"
@@ -93,13 +136,16 @@
 
     <Button
         android:id="@+id/loginGoogle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Sign in with Google"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black"
-        android:drawableLeft="@drawable/ic_google"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:textSize="16sp"
+        android:background="@drawable/btn_google"
+        android:drawableStart="@drawable/ic_google"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="1dp"
+
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -108,9 +154,11 @@
         android:id="@+id/alreadyHaveAcc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/poppins_medium"
         android:text="Already have an account?"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/loginGoogle"
         app:layout_constraintStart_toStartOf="@+id/loginGoogle"
         app:layout_constraintTop_toBottomOf="@+id/loginGoogle" />
