--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TARA" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.TARA" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item> <!--menu selected-->
         <item name="colorPrimaryVariant">@color/white</item>
@@ -15,7 +15,7 @@
     </style>
 
     <style name="toolbartex" parent="TextAppearance.MaterialComponents.Button">
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="TARA.toolbar" parent="Widget.AppCompat.Toolbar">
