--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,160 +8,172 @@
     android:background="@color/dark_blue"
     tools:context=".LoginRegistration.SignupActivity">
 
-    <TextView
-        android:id="@+id/signupTxt"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Sign Up"
-        android:textColor="@color/white"
-        android:textSize="50sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.239"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        >
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:backgroundTint="@color/white"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:hint="Full Name"
-        android:drawableStart="@drawable/ic_name"
-        android:drawablePadding="10dp"
-        android:drawableTint="@color/yellow"
-        android:paddingBottom="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupTxt" />
+        <TextView
+            android:id="@+id/signupTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Sign Up"
+            android:textColor="@color/white"
+            android:textSize="50sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.239"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/emailSignup"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:backgroundTint="@color/white"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:hint="Email"
-        android:drawableStart="@drawable/ic_email"
-        android:drawablePadding="10dp"
-        android:drawableTint="@color/yellow"
-        android:paddingBottom="15dp"
-        app:layout_constraintEnd_toEndOf="@+id/name"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:backgroundTint="@color/white"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:inputType="text"
+            android:imeOptions="actionNext"
+            android:maxLines="1"
 
-    <EditText
-        android:id="@+id/passwordSignup"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:backgroundTint="@color/white"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:hint="Password"
-        android:drawableStart="@drawable/ic_password"
-        android:drawablePadding="10dp"
-        android:drawableTint="@color/yellow"
-        android:paddingBottom="15dp"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/emailSignup"
-        app:layout_constraintStart_toStartOf="@+id/emailSignup"
-        app:layout_constraintTop_toBottomOf="@+id/emailSignup" />
+            android:hint="Full Name"
+            android:drawableStart="@drawable/ic_name"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/yellow"
+            android:paddingBottom="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/signupTxt" />
 
-    <EditText
-        android:id="@+id/confirmPassword"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:backgroundTint="@color/white"
-        android:textColorHint="@color/white"
-        android:hint="Confirm Password"
-        android:textColor="@color/white"
-        android:drawableStart="@drawable/ic_password"
-        android:drawablePadding="10dp"
-        android:drawableTint="@color/yellow"
-        android:paddingBottom="15dp"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/passwordSignup"
-        app:layout_constraintStart_toStartOf="@+id/passwordSignup"
-        app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />
+        <EditText
+            android:id="@+id/emailSignup"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:backgroundTint="@color/white"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:hint="Email"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/yellow"
+            android:paddingBottom="15dp"
+            app:layout_constraintEnd_toEndOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/name" />
 
-    <Button
-        android:id="@+id/signupBtn"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Sign Up"
-        android:textColor="@color/dark_blue"
-        android:textSize="16sp"
-        android:paddingTop="6dp"
-        android:background="@drawable/btn_login_signup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
+        <EditText
+            android:id="@+id/passwordSignup"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:backgroundTint="@color/white"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:hint="Password"
+            android:drawableStart="@drawable/ic_password"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/yellow"
+            android:paddingBottom="15dp"
+            android:inputType="textPassword"
+            app:layout_constraintEnd_toEndOf="@+id/emailSignup"
+            app:layout_constraintStart_toStartOf="@+id/emailSignup"
+            app:layout_constraintTop_toBottomOf="@+id/emailSignup" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="or sign in with:"
-        android:textSize="16sp"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="@+id/signupBtn"
-        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />
+        <EditText
+            android:id="@+id/confirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:backgroundTint="@color/white"
+            android:textColorHint="@color/white"
+            android:hint="Confirm Password"
+            android:textColor="@color/white"
+            android:drawableStart="@drawable/ic_password"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/yellow"
+            android:paddingBottom="15dp"
+            android:inputType="textPassword"
+            app:layout_constraintEnd_toEndOf="@+id/passwordSignup"
+            app:layout_constraintStart_toStartOf="@+id/passwordSignup"
+            app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />
 
-    <Button
-        android:id="@+id/loginGoogle"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:textSize="16sp"
-        android:background="@drawable/btn_google"
-        android:drawableStart="@drawable/ic_google"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="1dp"
+        <Button
+            android:id="@+id/signupBtn"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Sign Up"
+            android:textColor="@color/dark_blue"
+            android:textSize="16sp"
+            android:paddingTop="6dp"
+            android:background="@drawable/btn_login_signup"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
 
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins_medium"
+            android:text="or sign in with:"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="@+id/signupBtn"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintStart_toStartOf="@+id/signupBtn"
+            app:layout_constraintTop_toBottomOf="@+id/signupBtn" />
 
-    <TextView
-        android:id="@+id/alreadyHaveAcc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Already have an account?"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/loginGoogle"
-        app:layout_constraintStart_toStartOf="@+id/loginGoogle"
-        app:layout_constraintTop_toBottomOf="@+id/loginGoogle" />
+        <Button
+            android:id="@+id/loginGoogle"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:textSize="16sp"
+            android:background="@drawable/btn_google"
+            android:drawableStart="@drawable/ic_google"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="1dp"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintEnd_toEndOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/alreadyHaveAcc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/poppins_medium"
+            android:text="Already have an account?"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/loginGoogle"
+            app:layout_constraintStart_toStartOf="@+id/loginGoogle"
+            app:layout_constraintTop_toBottomOf="@+id/loginGoogle" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
