--- a/app/src/main/res/layout/activity_contact_support.xml
+++ b/app/src/main/res/layout/activity_contact_support.xml
@@ -62,9 +62,11 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardY"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="520dp"
             android:layout_marginTop="12dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
             app:cardBackgroundColor="@color/dark_blue"
             app:cardCornerRadius="15dp"
             app:cardElevation="12dp"
@@ -137,26 +139,27 @@ We are always available to assist you with rebooking, refunds, and any such issu
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_marginTop="50dp"
-            app:layout_constraintTop_toBottomOf="@+id/ourTeam"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="20dp">
+            app:layout_constraintTop_toBottomOf="@+id/ourTeam">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="30dp">
 
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="320dp"
                     android:layout_height="320dp"
                     app:cardCornerRadius="20dp"
                     app:cardElevation="12dp">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
                         android:gravity="center">
                         <ImageView
-                            android:src="@drawable/team1"
+
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             />
@@ -212,7 +215,7 @@ We are always available to assist you with rebooking, refunds, and any such issu
                         android:gravity="center">
 
                         <ImageView
-                            android:src="@drawable/team2"
+
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             android:layout_marginTop="20dp"
@@ -269,7 +272,7 @@ We are always available to assist you with rebooking, refunds, and any such issu
                         android:gravity="center">
 
                         <ImageView
-                            android:src="@drawable/team3"
+
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             android:layout_marginTop="20dp"
@@ -326,7 +329,7 @@ We are always available to assist you with rebooking, refunds, and any such issu
                         android:gravity="center">
 
                         <ImageView
-                            android:src="@drawable/team4"
+
                             android:layout_width="150dp"
                             android:layout_height="150dp"
                             android:layout_marginTop="20dp"
